Improving data generation for DB tests